# Fair.Launch-Linera

./: .dockerignore  .gitignore  ARCHITECTURE.md  BUG_AUDIT_REPORT.md  DEMO_CHECKLIST.md  DEMO_SCRIPT_FOR_JUDGES.md  DEPLOY.md  DEPLOYMENT_INFO.md  Dockerfile.linera  ERRORS_FIXED.md  FINAL_VERIFICATION_PASSED.md  FRONTEND_CONNECTION_COMPLETE.md  FRONTEND_STATUS.md  PROGRESS_SUMMARY.md  README.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_READY.md  TESTING.md  WALLET_SITUATION_EXPLAINED.md  WINNER_FEATURES_ANALYSIS.md  create-first-token.sh  docker-compose.yml  quick-start.sh  verify-submission.sh
contracts/: Cargo.toml  deploy.sh
contracts/abi/: Cargo.toml
contracts/abi/src/: bonding_curve_tests.rs  lib.rs
contracts/factory/: .gitignore  CHECKLIST.md  Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  INDEX.md  README.md  SUMMARY.md  build.sh  test.sh
contracts/factory/src/: contract.rs  service.rs  state.rs  tests.rs
contracts/swap/: Cargo.toml  EXAMPLES.md  INTEGRATION.md  QUICKSTART.md  README.md  SUMMARY.md
contracts/swap/src/: contract.rs  service.rs  state.rs  tests.rs
contracts/tests/: integration_test.rs
contracts/token/: Cargo.toml
contracts/token/src/: contract.rs  service.rs  state.rs  tests.rs
frontend/: .env.example  .eslintrc.cjs  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  START_HERE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BondingCurveChart.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  Layout.tsx  LoadingSpinner.tsx  TokenCard.tsx  TradeFeed.tsx  TradeForm.tsx  WalletButton.tsx
frontend/src/hooks/: usePortfolio.ts  useTokens.ts  useTrades.ts
frontend/src/lib/: config.ts  graphql-client.ts  queries.ts  store.ts  utils.ts  wallet-utils.ts
frontend/src/pages/: CreateTokenPage.tsx  HomePage.tsx  PortfolioPage.tsx  TokenDetailPage.tsx
frontend/src/types/: index.ts
scripts/: demo-setup.sh  deploy-contracts.sh  deploy-testnet.sh  deploy.sh  start-network.sh  stop.sh
