[workspace]
resolver = "2"
members = [
    "abi",
    "factory",
    "token",
    "swap",
]

[workspace.dependencies]
# Linera SDK - Using 0.15.7 like microcard-master (winner project)
# Version 0.15.7 has compatible getrandom dependencies
linera-sdk = { version = "=0.15.7" }
linera-views = { version = "=0.15.7" }

# GraphQL
async-graphql = { version = "=7.0.17", default-features = false }
async-graphql-derive = { version = "=7.0.17", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Math and primitives
primitive-types = { version = "0.12", features = ["serde"] }
rust_decimal = "1.33"

# Async
async-trait = "0.1"
tokio = { version = "1.35", default-features = false, features = ["sync", "macros"] }

# WASM support - custom getrandom for Linera (required for wasm32-unknown-unknown)
getrandom = { version = "0.2.15", default-features = false, features = ["custom"] }

[profile.release]
opt-level = "z"          # Optimize for size (important for WASM)
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
strip = true             # Remove debug symbols
panic = "abort"          # Smaller binary
overflow-checks = false  # Faster execution
