[package]
name = "fair-launch-factory"
version = "0.1.0"
edition = "2021"

[dependencies]
fair-launch-abi = { path = "../abi" }

linera-sdk = { workspace = true }
linera-views = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
primitive-types = { workspace = true }
log = "0.4"

# Service-only dependencies (not included in contract WASM)
async-graphql = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
service = ["async-graphql", "async-trait", "tokio", "fair-launch-abi/service"]

[[bin]]
name = "fair_launch_factory_contract"
path = "src/contract.rs"
required-features = []

[[bin]]
name = "fair_launch_factory_service"
path = "src/service.rs"
required-features = ["service"]
