[package]
name = "fair-launch-token"
version = "0.1.0"
edition = "2021"

[dependencies]
fair-launch-abi = { path = "../abi" }

# Linera
linera-sdk = { workspace = true }
linera-views = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Math
primitive-types = { workspace = true }

# Logging
log = "0.4"

# Service-only dependencies (not included in contract WASM)
async-graphql = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = []
service = ["async-graphql", "async-trait", "tokio", "fair-launch-abi/service"]

[[bin]]
name = "fair_launch_token_contract"
path = "src/contract.rs"
required-features = []

[[bin]]
name = "fair_launch_token_service"
path = "src/service.rs"
required-features = ["service"]
